k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudcart-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudcart-frontend
  template:
    metadata:
      labels:
        app: cloudcart-frontend
    spec:
      containers:
        - name: frontend
          image: 185529490140.dkr.ecr.ap-south-1.amazonaws.com/cloudcart:frontend-v5
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
