k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudcart-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudcart-backend
  template:
    metadata:
      labels:
        app: cloudcart-backend
    spec:
      containers:
        - name: backend
          image: 185529490140.dkr.ecr.ap-south-1.amazonaws.com/cloudcart:backend-v6
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/db-test
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/db-test
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: cloudcart-backend
spec:
  type: ClusterIP
  selector:
    app: cloudcart-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
