k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudcart-frontend
spec:
  type: ClusterIP
  selector:
    app: cloudcart-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
